unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/pse__Expenses_UI_Personal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Deprecated:Expenses UI Personal</label>
</CustomObject>