unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Allow_Mixed_Billable_Non_Billable_ER__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Mixed_Billable_Non_Billable_ER__c</fullName>
    <defaultValue>"True"</defaultValue>
    <label>Allow Mixed Billable Non Billable ER</label>
    <length>18</length>
    <type>Text</type>
</CustomField>