unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Always_Use_Project_Expense_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Always_Use_Project_Expense_Limit_Amount__c</fullName>
    <defaultValue>"true"</defaultValue>
    <description>If true, the Project Expense Limit Amount would always be used</description>
    <inlineHelpText>If true, the Project Expense Limit Amount would always be used</inlineHelpText>
    <label>Always Use Project Expense Limit Amount</label>
    <length>5</length>
    <type>Text</type>
</CustomField>