unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Expense_Line_Updates_Synchronous_Only__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Line_Updates_Synchronous_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, Expense Line updates would be synchronous only</description>
    <inlineHelpText>If true, Expense Line updates would be synchronous only</inlineHelpText>
    <label>Expense Line Updates Synchronous Only</label>
    <type>Checkbox</type>
</CustomField>