unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Max_Synchronous_Expense_Lines__c.field-meta.xml
<CustomField>
    <fullName>pse__Max_Synchronous_Expense_Lines__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Maximum number of synchronous Expense Lines</description>
    <inlineHelpText>Maximum number of synchronous Expense Lines</inlineHelpText>
    <label>Max Synchronous Expense Lines</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>