unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Records_Per_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>pse__Records_Per_Page_Count__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Records Per Page Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>