unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Set_Default_to_Assignment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Set_Default_to_Assignment_Milestone__c</fullName>
    <defaultValue>"True"</defaultValue>
    <label>Set Default to Assignment Milestone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>