unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Set_Owner_To_Resource_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>pse__Set_Owner_To_Resource_Salesforce_User__c</fullName>
    <defaultValue>"True"</defaultValue>
    <description>If true, sets owner to resource salesforce user</description>
    <inlineHelpText>If true, sets owner to resource salesforce user</inlineHelpText>
    <label>Set Owner To Resource Salesforce User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>