unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Show_Default_Incurred_Non_Billable_Tax__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Default_Incurred_Non_Billable_Tax__c</fullName>
    <defaultValue>"true"</defaultValue>
    <description>If true, Expense Default Non-Billable Tax will be show on Edit Expenses UI.</description>
    <inlineHelpText>If true, Expense Default Non-Billable Tax will be show on Edit Expenses UI.</inlineHelpText>
    <label>Show Default Incurred Non-Billable Tax</label>
    <length>5</length>
    <type>Text</type>
</CustomField>