unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Show_Non_Reimbursable_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Non_Reimbursable_Amount__c</fullName>
    <defaultValue>"true"</defaultValue>
    <description>If true, Expense Non-Reimbursable Amount will be show on Edit Expenses UI.</description>
    <inlineHelpText>If true, Expense Non-Reimbursable Amount will be show on Edit Expenses UI.</inlineHelpText>
    <label>Show Non-Reimbursable Amount</label>
    <length>5</length>
    <type>Text</type>
</CustomField>