unpackaged/main/default/objects/pse__Expenses_UI_Personal__c/fields/pse__Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Submitted__c</fullName>
    <defaultValue>"Submitted"</defaultValue>
    <description>String to denote Submitted</description>
    <inlineHelpText>String to denote Submitted</inlineHelpText>
    <label>Submitted</label>
    <length>18</length>
    <type>Text</type>
</CustomField>